tiles fixed on mobile

--- a/src/css/modules/grid.less
+++ b/src/css/modules/grid.less
@@ -20,8 +20,12 @@
   flex-basis: 33%;
   flex-shrink: 1;
 
-  @media screen and (max-width: 982px) {
+  @media screen and (max-width: 662px) {
     flex-grow: 1;
+  }
+
+  @media screen and (min-width: 662px) and (max-width: 983px) {
+    flex-basis: 50%;
   }
 
   @media screen and (max-width: 500px) {
